[gd_scene load_steps=10 format=3 uid="uid://d4if5q63xuj06"]

[ext_resource type="Texture2D" uid="uid://b60m7ugw66qpq" path="res://assets/player/parrot.png" id="1_7v6jt"]
[ext_resource type="Script" uid="uid://ddvwf31xq66am" path="res://Scenes/Animal/Animal.gd" id="1_i2apv"]
[ext_resource type="Texture2D" uid="uid://1dq3yrdraihm" path="res://assets/items/arrow.png" id="2_i2apv"]
[ext_resource type="AudioStream" uid="uid://b8se7dtoqhfa3" path="res://assets/audio/stretch2.ogg" id="4_hsrja"]
[ext_resource type="AudioStream" uid="uid://dq44fsc5g2k5w" path="res://assets/audio/catapult.ogg" id="5_00mlg"]
[ext_resource type="AudioStream" uid="uid://csuaer3wgtyst" path="res://assets/audio/kick_wood.ogg" id="6_idc63"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hsrja"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_0lqsu"]

[sub_resource type="LabelSettings" id="LabelSettings_hsrja"]
font_color = Color(0, 0, 0, 1)
outline_size = 3

[node name="Animal" type="RigidBody2D"]
rotation = 4.32661e-05
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_hsrja")
freeze = true
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_i2apv")

[node name="Bird" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_7v6jt")

[node name="Bird Collision Shape" type="CollisionShape2D" parent="."]
scale = Vector2(1.985, 1.985)
shape = SubResource("CircleShape2D_0lqsu")

[node name="Debug Label" type="Label" parent="."]
offset_left = -19.0024
offset_top = -97.9992
offset_right = 20.9976
offset_bottom = -74.9992
pivot_offset = Vector2(18.071, -0.0760574)
text = "0000"
label_settings = SubResource("LabelSettings_hsrja")

[node name="Arrow" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_i2apv")
offset = Vector2(150, 0)

[node name="Stretch Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hsrja")

[node name="Launch Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_00mlg")
volume_db = -10.0

[node name="Kick Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_idc63")
volume_db = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_sleeping_state_changed"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
